--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="card">
                         <img src="https://c4.wallpaperflare.com/wallpaper/384/350/430/digital-art-artwork-cyber-cyberpunk-neon-hd-wallpaper-thumb.jpg" class="card-img-top" alt="Art 1">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Women</h5>
+                            <h5 class="card-title">Woman</h5>
                             <p class="card-text"></p>
                             <a href="https://c4.wallpaperflare.com/wallpaper/384/350/430/digital-art-artwork-cyber-cyberpunk-neon-hd-wallpaper-thumb.jpg" download="" class="btn btn-primary" target="_blank">Download</a>
                             
