--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
      <section class="py-5" id="aboutus">
         <div class="container">
             <h2 class="mb-4" style="text-align: center;">About us</h2>
-            <p style="text-align: center;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit obcaecati doloremque quam porro ipsa placeat soluta eveniet ut, commodi distinctio mollitia perferendis facere quidem animi quia perspiciatis laborum? Tempore, ducimus.</p>
+            <p style="text-align: center;">Siddhu daadhi wala, golo molu sa </p>
         </div>
      </section>
 
