--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
      <section class="py-5" id="aboutus">
         <div class="container">
             <h2 class="mb-4" style="text-align: center;">About us</h2>
-            <p style="text-align: center;">Siddhu daadhi wala, golo molu sa </p>
+            <p style="text-align: center;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, consequatur? In vel harum, reprehenderit laboriosam officia repellendus fugiat cum nisi. Aliquam saepe soluta accusamus voluptatibus cupiditate. In autem tempora non!</p>
         </div>
      </section>
 
